fix: Fix a bug where the chat header layout breaks when there are attachments

--- a/src/app/page/group/chat/chat.component.scss
+++ b/src/app/page/group/chat/chat.component.scss
@@ -17,7 +17,6 @@
   
   .title {
     display: flex;
-    height: 48px;
     box-shadow: 0px 4px 3px var(--shadow-color);
     border-radius: 8px;
 
